test/corpus/strings.txt
================================================================================
Simple string
================================================================================

module main

let x = "hello world"

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    (identifier))
  (let_declaration
    (identifier)
    (string
      (string_content))))

================================================================================
Empty string
================================================================================

module main

let x = ""

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    (identifier))
  (let_declaration
    (identifier)
    (string)))

================================================================================
String with escape sequences
================================================================================

module main

let x = "line1\nline2\ttab\\backslash\"quote\$dollar\0null"

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    (identifier))
  (let_declaration
    (identifier)
    (string
      (string_content)
      (escape_sequence)
      (string_content)
      (escape_sequence)
      (string_content)
      (escape_sequence)
      (string_content)
      (escape_sequence)
      (string_content)
      (escape_sequence)
      (string_content)
      (escape_sequence)
      (string_content))))

================================================================================
String interpolation simple
================================================================================

module main

let x = "hello ${name}"

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    (identifier))
  (let_declaration
    (identifier)
    (string
      (string_content)
      (interpolation
        (identifier)))))

================================================================================
String interpolation complex expression
================================================================================

module main

let x = "result: ${a + b}"

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    (identifier))
  (let_declaration
    (identifier)
    (string
      (string_content)
      (interpolation
        (binary_expression
          (identifier)
          (identifier))))))

================================================================================
String with multiple interpolations
================================================================================

module main

let x = "${proto}://${host}:${port}"

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    (identifier))
  (let_declaration
    (identifier)
    (string
      (interpolation
        (identifier))
      (string_content)
      (interpolation
        (identifier))
      (string_content)
      (interpolation
        (identifier)))))

================================================================================
String interpolation with selector
================================================================================

module main

let url = "https://example.com/v${pkg.version}/app.tar.gz"

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    (identifier))
  (let_declaration
    (identifier)
    (string
      (string_content)
      (interpolation
        (selector_expression
          (identifier)
          (identifier)))
      (string_content))))

================================================================================
Multi-line backtick string
================================================================================

module main

let body = `
  line one
  line two
  `

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    (identifier))
  (let_declaration
    (identifier)
    (multiline_string
      (multiline_string_content))))

================================================================================
Multi-line backtick string with interpolation
================================================================================

module main

let resolv = `
  search ${realm}
  nameserver 1.1.1.1
  `

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    (identifier))
  (let_declaration
    (identifier)
    (multiline_string
      (multiline_string_content)
      (interpolation
        (identifier))
      (multiline_string_content))))

================================================================================
Multi-line backtick string with literal double quotes
================================================================================

module main

let json = `{"data": [1, 2, 3]}`

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    (identifier))
  (let_declaration
    (identifier)
    (multiline_string
      (multiline_string_content))))

================================================================================
Multi-line backtick string with escaped backtick and dollar
================================================================================

module main

let s = `tick \` and dollar \${ no interp`

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    (identifier))
  (let_declaration
    (identifier)
    (multiline_string
      (multiline_string_content)
      (multiline_escape_sequence)
      (multiline_string_content)
      (multiline_escape_sequence)
      (multiline_string_content))))

================================================================================
Multi-line backtick string with bash line continuation
================================================================================

module main

let body = `
  cmd1 \
    --flag value \
  cmd2
  `

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    (identifier))
  (let_declaration
    (identifier)
    (multiline_string
      (multiline_string_content)
      (multiline_escape_sequence)
      (multiline_string_content)
      (multiline_escape_sequence)
      (multiline_string_content))))
